<resources>
    <string name="app_name">Shoes R Us</string>
    <string name="products">Products</string>
    <string name="checkout">Checkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoes_r_us">Shoes R Us</string>
    <string name="product_image">Product Image</string>
    <string name="product_title">Product title</string>
    <string name="product_price">Product price</string>
    <string name="check_out">Check Out</string>
    <string name="item_s">Item(s)</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_price">$40</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price</string>
    <string name="no_item_added_to_checklist_yet">No item added to checkout yet!</string>
    <string name="back_to_products">Back to Products</string>
    <string name="order_successful">Order Successful!</string>
</resources>